# ros_msg_with_diff_pkg_name

rclcpp_test/: CMakeLists.txt  package.xml  pub_test.cpp
rclpy_test/: pub_test.py
ros_msg_test/: CMakeLists.txt  package.xml
ros_msg_test/msg/: Foo.msg
